turning string to array and back to fix readability

--- a/app/src/pages/recipe-page/recipe-page-css.css
+++ b/app/src/pages/recipe-page/recipe-page-css.css
@@ -36,5 +36,5 @@
 }
 
 .ul {
-	flex-direction: column;
+
 }
